--- a/popup.html
+++ b/popup.html
@@ -151,6 +151,6 @@
             </div>
         </div>
     </body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="jquery.min.js"></script>
     <script src="popup.js"></script>
 </html>
